# ibkatas

./: README.md
barnett-smart-kata/: Cargo.toml  README.md
barnett-smart-kata/stage-1-encode/: README.md
barnett-smart-kata/stage-1-encode/exercise/: Cargo.toml
barnett-smart-kata/stage-1-encode/exercise/src/: lib.rs
barnett-smart-kata/stage-1-encode/solution/: Cargo.toml  SOLUTION.md
barnett-smart-kata/stage-1-encode/solution/src/: card.rs  lib.rs
barnett-smart-kata/stage-2-sigma/: README.md
barnett-smart-kata/stage-2-sigma/exercise/: Cargo.toml
barnett-smart-kata/stage-2-sigma/exercise/src/: lib.rs
barnett-smart-kata/stage-2-sigma/solution/: Cargo.toml  SOLUTION.md
barnett-smart-kata/stage-2-sigma/solution/src/: lib.rs
barnett-smart-kata/stage-3-elgamal/: README.md
barnett-smart-kata/stage-3-elgamal/exercise/: Cargo.toml
barnett-smart-kata/stage-3-elgamal/exercise/src/: lib.rs  sigma.rs
barnett-smart-kata/stage-3-elgamal/solution/: Cargo.toml  SOLUTION.md
barnett-smart-kata/stage-3-elgamal/solution/src/: lib.rs
barnett-smart-kata/stage-4-shuffle/: README.md
barnett-smart-kata/stage-4-shuffle/exercise/: Cargo.toml
barnett-smart-kata/stage-4-shuffle/exercise/src/: lib.rs  sigma.rs
barnett-smart-kata/stage-4-shuffle/solution/: Cargo.toml  SOLUTION.md
barnett-smart-kata/stage-4-shuffle/solution/src/: elgamal.rs  encode.rs  lib.rs
