[package]
name = "elgamal-kata-solution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-pallas.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
rand.workspace = true
sha2.workspace = true
